# grpc_requests

./: setup.cfg
src/grpc_requests/: aio.py  client.py
